--- a/assets/sass/styles.css
+++ b/assets/sass/styles.css
@@ -92,8 +92,8 @@ html {
   align-items: center;
   opacity: 0.9;
   z-index: 1000;
-  -webkit-animation: show-loading-spinner 2s linear forwards;
-          animation: show-loading-spinner 2s linear forwards;
+  -webkit-animation: show-loading-spinner 1s linear forwards;
+          animation: show-loading-spinner 1s linear forwards;
 }
 #loading-spinner-container div {
   position: relative;
@@ -561,10 +561,8 @@ main #restaurants #restaurants-content .restaurant-tiles .restaurant-tile {
   width: 90%;
   border-radius: 20px;
   box-shadow: 0px 0px 10px lightgray;
-  text-decoration: none;
-  color: black;
-  display: block;
   margin-top: 20px;
+  position: relative;
 }
 @media all and (min-width: 992px) {
   main #restaurants #restaurants-content .restaurant-tiles .restaurant-tile {
@@ -575,6 +573,11 @@ main #restaurants #restaurants-content .restaurant-tiles .restaurant-tile {
   main #restaurants #restaurants-content .restaurant-tiles .restaurant-tile {
     width: 22%;
   }
+}
+main #restaurants #restaurants-content .restaurant-tiles .restaurant-tile a {
+  text-decoration: none;
+  color: black;
+  display: block;
 }
 main #restaurants #restaurants-content .restaurant-tiles .restaurant-tile img {
   height: 180px;
@@ -587,18 +590,17 @@ main #restaurants #restaurants-content .restaurant-tiles .restaurant-tile img {
 main #restaurants #restaurants-content .restaurant-tiles .restaurant-tile .restaurant-tile-infos {
   width: 100%;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 20px;
-}
-main #restaurants #restaurants-content .restaurant-tiles .restaurant-tile .restaurant-tile-infos .restaurant-tile-infos-text {
-  width: 90%;
-}
-main #restaurants #restaurants-content .restaurant-tiles .restaurant-tile .restaurant-tile-infos .restaurant-tile-like {
-  width: 10%;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 20px 0 20px 20px;
 }
 main #restaurants #restaurants-content .restaurant-tiles .restaurant-tile:hover {
   box-shadow: 0px 0px 10px #9356DC;
+}
+main #restaurants #restaurants-content .restaurant-tiles .restaurant-tile .restaurant-tile-like {
+  position: absolute;
+  bottom: 25px;
+  right: 20px;
 }
 
 .menu-container {
